# parity-db

./: Cargo.toml
.github/workflows/: mayhem.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: open_metadata.rs
mayhem/: Dockerfile  open_metadata.mayhemfile
src/: compress.rs  options.rs
